--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,8 @@ branches:
 
 env:
   global:
-    - REPO_TAG_NAME=7.0.0-A16
-    - SHARE_TAG_NAME=latest
+    - REPO_TAG_NAME=7.0.0-M3
+    - SHARE_TAG_NAME=7.0.0-M3
     # Release version has to start with real version (7.0.0-....) for the docker image to build successfully.
     - RELEASE_VERSION=7.0.0-A15
     - DEVELOPMENT_VERSION=7.0.0-SNAPSHOT
