--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ stages:
   - tearDown
   - release
   - company_release
+  - test_reports
 
 before_install:
   - |
@@ -61,6 +62,9 @@ before_install:
     mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
     export PATH=$PATH:$HOME/bin
     aws eks update-kubeconfig --name appsTeam --region=eu-west-1
+    sudo apt-add-repository ppa:qameta/allure
+    sudo apt-get update
+    sudo apt-get install allure
 
 jobs:
   include:
@@ -118,6 +122,11 @@ jobs:
     - <<: *test-staging
       name: "Content Tests"
       script: bash _ci/execute_share_web.sh "content-tests.xml"
+
+    - name: "Generate test reports"
+      stage: test_reports
+      install: skip
+      script: bash _ci/test-reports.sh
 
     - name: "Delete environment"
       stage: tearDown
