--- a/.travis.yml
+++ b/.travis.yml
@@ -116,6 +116,9 @@ jobs:
 #      script: bash _ci/execute_share_web.sh "user-and-site-dashboard-tests.xml"
 #      addons:
 #        artifacts:
+#          paths:
+#            - alfresco-tas-share-test/target/surefire-reports
+#            - alfresco-tas-share-test/target/reports
 #          target_paths: $TRAVIS_BUILD_NUMBER/user-and-site-dashboard-tests
 
     - <<: *test-staging
@@ -133,6 +136,9 @@ jobs:
 #      script: bash _ci/execute_share_web.sh "content-tests.xml"
 #      addons:
 #        artifacts:
+#          paths:
+#            - alfresco-tas-share-test/target/surefire-reports
+#            - alfresco-tas-share-test/target/reports
 #          target_paths: $TRAVIS_BUILD_NUMBER/content-tests
     - name: "Generate test reports"
       stage: report
